--- a/main.scss
+++ b/main.scss
@@ -7,29 +7,43 @@
     
     Don't change the container width.
   */
-  margin: 0 auto;
-  left: 5%;
+  margin: 0 auto;  
+  left:5%;
   margin-left: 150px;
   position: relative;
-  min-width: 300px; }
+  min-width: 300px;
+}
 
-nav {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  display: block;
-  background-color: #CCCCCC;
-  border: 1px solid #AAAAAA;
+nav
+{
+  position:fixed;
+  top:0px;
+  left:0px;
+  display:block;
+  background-color:#CCCCCC;
+  border: 1px solid #AAAAAA; 
   width: 150px;
-  height: 100%; }
-  nav ul {
-    margin: 0px;
-    padding-left: 0px; }
-  nav li {
+  height:100%;
+
+  ul 
+  {
+    margin:0px;
+    padding-left:0px;
+  }
+  
+  li
+  {
+
     border-bottom: 1px solid #DDDDDD;
     padding: 10px 5px 10px 10px;
     list-style: none;
-    list-style-type: none; }
-    nav li a:link, nav li a:visited, nav li a:hover, nav li a:active {
+    list-style-type: none;
+
+    a:link, a:visited, a:hover, a:active
+    {
       text-decoration: none;
-      color: black; }
+      color:black;
+    }
+  }
+
+}
